# practica-1-classes-opengl

./: CMakeLists.txt  README.md
ejercicio_1/: CMakeLists.txt  README.md
ejercicio_1/assets/: batallas.txt  torneo.txt
ejercicio_1/include/: AttributeComponent.hpp  Battle.hpp  BattleManager.hpp  Component.hpp  Entity.hpp  GameManager.hpp  SpeciesComponent.hpp  Tournament.hpp  TournamentManager.hpp
ejercicio_1/src/: AttributeComponent.cpp  Battle.cpp  BattleManager.cpp  Entity.cpp  GameManager.cpp  Main.cpp  SpeciesComponent.cpp  Tournament.cpp  TournamentManager.cpp
ejercicio_2/: CMakeLists.txt
ejercicio_2/build_local/: opengl_intro
ejercicio_2/include/engine/: Application.hpp  Mesh.hpp  Renderer.hpp  Scene.hpp  Shader.hpp  Window.hpp
ejercicio_2/include/glad/: glad.h
ejercicio_2/include/scenes/: MainScene.hpp
ejercicio_2/src/: Main.cpp  Mesh.cpp  Renderer.cpp  Shader.cpp  Window.cpp  glad.c
ejercicio_2/src/scenes/: MainScene.cpp
